--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/sample.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/sample.data.gz",
-        frameworkUrl: buildUrl + "/sample.framework.js.gz",
-        codeUrl: buildUrl + "/sample.wasm.gz",
+        dataUrl: buildUrl + "/sample.data",
+        frameworkUrl: buildUrl + "/sample.framework.js",
+        codeUrl: buildUrl + "/sample.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Remote-Reaction",
